to/kubernetes/jupyterlab.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: do-jupyterlab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: do-jupyterlab
  namespace: do-jupyterlab
  labels:
    app: do-jupyterlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: do-jupyterlab
  template:
    metadata:
      labels:
        app: do-jupyterlab
    spec:
      #nodeSelector:
      #  beta.kubernetes.io/instance-type: "c5.2xlarge"
      containers:
      - name: main
        image: "iankoulski/do-jupyterlab:latest"
        imagePullPolicy: Always
        #command: [""]
        #args: [""]
        ports:
        - name: pod-port
          containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: do-jupyterlab
  namespace: do-jupyterlab
  labels:
    app: do-jupyterlab
spec:
  ports:
  - name: svc-port
    port: 80
    targetPort: pod-port 
  type: ClusterIP
  selector:
    app: do-jupyterlab
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: do-jupyterlab
  namespace: do-jupyterlab
spec:
  rules:
  - host: "do-jupyterlab.domain.ext"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: do-jupyterlab
            port:
              number: 80
